# dzip-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
cli/: Cargo.toml  README.md
cli/src/: args.rs  config.rs  main.rs
core/: Cargo.toml  README.md
core/src/: error.rs  format.rs  io.rs  lib.rs  list.rs  reader.rs  unpack.rs  writer.rs
core/tests/: real_files.rs  roundtrip.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: lib.rs  pack.rs  unpack.rs
reference/: DZSettings.h
src/: compression.rs  constants.rs  error.rs  lib.rs  main.rs  pack.rs  unpack.rs  utils.rs
test_data/DerbhExampleFiles/: DerbhCLI.txt
test_data/DerbhExampleFiles/TXT/: Text2.txt
test_data/ExampleSingleArchive/: test1.dz  test2.dz
test_data/ExampleSplitArchive/: testnew.dz  testnew1.dz  testnew3.dz
