[package]
name = "dzip-cli"
version = "0.2.0"
authors = ["Ed1th"]
description = "A CLI tool to unpack and pack Marmalade SDK .dz archives."
edition = "2024"

[dependencies]
anyhow = "1.0.100"
thiserror = "2.0.17"
byteorder = "1.5.0"
clap = { version = "4.5.53", features = ["derive"] }
flate2 = "1.1.5"
lzma-rust2 = "0.15.4"
bzip2 = "0.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
toml = "0.9.8"
log = "0.4"
env_logger = "0.11"
bitflags = "2.10.0"
rayon = "1.11.0"
indicatif = "0.18.3"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
