[package]
name = "dzip-cli"
version = "0.3.0"
edition = "2024"

[dependencies]
dzip-core = { path = "../core" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"
log = "0.4"
env_logger = "0.11"

rayon = "1.11.0"
indicatif = "0.18.3"
