[package]
name = "dzip-core"
readme = "README.md"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
log = { workspace = true }
thiserror = "2.0.18"
byteorder = "1.5.0"
flate2 = "1.1.8"
lzma-rust2 = "0.15.7"
bzip2 = "0.6.1"
serde_json = "1.0.149"
bitflags = "2.10.0"
rayon = "1.11.0"
tempfile = "3.24.0"
binrw = "0.15.0"
