[package]
name = "dzip-cli"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "A CLI tool to unpack and pack Marmalade SDK .dz archives."

[dependencies]
# Import the core library locally
dzip-core = { path = "../core" }

# CLI specific dependencies (UI/Args/Logs)
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
indicatif = "0.18.3"