[package]
name = "dzip-cli"
readme = "README.md"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "A CLI tool to unpack and pack Marmalade SDK .dz archives."

[dependencies]
# Import the core library locally
dzip-core = { path = "../core" }

# CLI specific dependencies (UI/Args/Logs)
serde = { workspace = true }
log = { workspace = true }
toml = "0.9.8"
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11"
indicatif = "0.18.3"
